fixed event display overflow on dashboard

--- a/src/css/EventDisplay.css
+++ b/src/css/EventDisplay.css
@@ -1,3 +1,4 @@
 #event-display {
   grid-area: events;
+  overflow: hidden
 }
